nit(): added end point to get historical currency data by currency code
