# src/main/java/io/kokilaw/rupiyal/dto/ExtendedRateEntryDTO.java
@@ -1,0 +1,4 @@
+package io.kokilaw.rupiyal.dto;
+
+public record ExtendedRateEntryDTO(String bankCode, String rate, String date, String lastUpdated) {
+}
